# knu-shell

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: commands.bnf.txt
src/: CMakeLists.txt  charset.cpp  charset.h  fsm.cpp  fsm.h  input.cpp  input.h  input_parser.cpp  input_parser.h  main.cpp  shell.cpp  shell.h  string_parser.cpp  string_parser.h  tokens.cpp  tokens.h  util.cpp  util.h
tests/: CMakeLists.txt  main.cpp  test_input.cpp  test_input_parser.cpp  test_shell.cpp  test_string_parser.cpp  test_tokens.cpp
